# cuda-workshop-solutions

./: LICENSE  README.md
pres/: .gitignore
pres/src/: 01_gpus.tex  02_cuda_flow.tex  03_extras.tex  macros.tex  main.tex
pres/src/figures/: cuda_gl.tex  matmul.tex
solutions/: .gitignore  CMakeLists.txt  conandata.yml
solutions/0a_vec_add/: main.cu
solutions/0b_grayscale/: CMakeLists.txt  main.cu
solutions/1_matmul/: kernel.cu
solutions/1_matmul/expected/: output_n16_s4.txt  output_n4_s0.txt
solutions/2_convolution/: kernel.cu
solutions/2_convolution/examples/: box-blur.conv  gaussian-blur-3x3.conv  gaussian-blur-5x5.conv
solutions/3_game_of_life/examples/: beacon.life  glider.life
solutions/4_raytrace/: kernel.cu  loader.cu
solutions/4_raytrace/examples/: duckies.ini
workshop/solutions/: CMakeLists.txt  conandata.yml  cuda_wrapper.hpp
workshop/solutions/0a_vec_add/: CMakeLists.txt
workshop/solutions/0b_grayscale/: CMakeLists.txt
workshop/solutions/1_matmul/: CMakeLists.txt  kernel.hpp  main.cu
workshop/solutions/2_convolution/: CMakeLists.txt  kernel.hpp  main.cu
workshop/solutions/2_convolution/examples/: ridge-detect.conv  unsharp-mask.conv
workshop/solutions/3_game_of_life/: CMakeLists.txt  kernel.cu  kernel.hpp  main.cu
workshop/solutions/3_game_of_life/examples/: glider_train.life  gosper_gun.life  hivenudger2.life  pulsar.life
workshop/solutions/4_raytrace/: CMakeLists.txt  float3.hpp  kernel.cu  kernel.hpp  loader.cu  loader.hpp  main.cu  matrix.hpp  scene.cu  scene.hpp
workshop/solutions/4_raytrace/examples/: pyramid.ini  (+2 more)
